# Cryptid-solver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  manifest  repositories.manifest
Cryptid/: .gitignore  Cryptid.cxx  buildfile  state.json
Cryptid/map/: hex.cxx  hex.hxx  sector.hxx  sectors.json  shared.hxx
src/: Cryptid.cpp  Solver.cpp  Solver.hpp  state.json
src/clues/: clue.cpp  clue.hpp
src/lodash/: lodash.hpp
src/map/: handler.cpp  handler.hpp  hex.cpp  hex.hpp  logic.hpp  sector.cpp  sector.hpp  sectors.json  shared.hpp
